--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body{
     /*background-color: #65727C;*/
     background: linear-gradient(82deg, rgba(62,95,138,1) 13%, rgba(30,31,32,1) 52%, rgba(62,95,138,1) 69%, rgba(30,31,32,1) 77%);
-    
+    overflow-x: hidden;
 }
 /*Parte Header*/
 header{
@@ -21,7 +21,7 @@ header{
 
 .nav{
     background-color: #283649;
-    width: 100%;
+    width: 100vw;
     height: 60px;
     display: flex;
     justify-content: end;
@@ -30,7 +30,7 @@ header{
     display: flex;
     align-items: center;
     list-style: none;
-    margin-right: 15px;
+    margin-right: 100px;
 }
 .nav_list a{
     text-decoration: none;
