--- a/style.css
+++ b/style.css
@@ -677,12 +677,12 @@ header{
         margin-left: 100px;
     }
     .Title_About h1{
-        margin-left: 25vw;
+        margin-left: 25%;
     }
 
     .About_Org p {
-        width: 100vw;
-        margin-left: 20vw;
+        width: 100%;
+        margin-left: 20%;
         padding: 0;
         font-size: 1rem;
         font-family: 'Helvetica Neue';
@@ -719,7 +719,7 @@ header{
 
     .Container_Streams{
         width: 100%;
-        margin-left: 35vw;
+        margin-left: 35%;
     }
     .Text_Streams{
         margin: 0;
@@ -746,7 +746,7 @@ header{
         margin-left: 20%;
     }
     .Title_SubTitle_Sponsors{
-        width: 90vw;
+        width: 90%;
         margin: 0 0 0 23px;
         padding: 0;
     }
