--- a/style.css
+++ b/style.css
@@ -487,26 +487,32 @@ header{
 
 /* Site para Tablet/Ipad */
 
-@media (max-width:834px){
+@media (max-width:884px){
 
     /*Parte do Home*/
+
+    .nav_list{
+        margin-right: 10px;
+    }
     .home{
         margin-bottom: 350px;
     }
     .Title_Welcome{
-        width: 300px;
+        width: 400px;
         font-size: 25px;
-        margin-top: 100px;
+        text-align: left;
+        margin: 0;
+        
     }
     .Sub_Title_Welcome{
-        width: 300px;
+        width: 350px;
         font-size: 15px;
         text-align: left;
     }
     .Home_Img img{
-        width: 300px;
-        height: 300px;
-        margin-left: 80px;
+        width: 280px;
+        height: 280px;
+        margin: 0;
     }
 
     /*Parte Sobre*/
@@ -605,19 +611,24 @@ header{
     }
     .Texts_Footer p{
         display: flex;
+        justify-content: center;
         text-align: center;
         font-size: 15px;
-        margin-bottom: 15px;
+        margin: 0 100px 20px ;
         padding: 10px
     }
     .Logos_Links{
-        margin-top: 20px;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 }
 /*Para Smarthpones e Iphones*/
 
 @media (max-width:480px){ 
 
+    body{
+        width: 100vw;
+    }
     /*Header + Menu Mobile*/
     
     .nav{
@@ -634,20 +645,21 @@ header{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 20px;
+        margin: 0;
     }    
     .Title_SubTitle{
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 20%;
+        margin: 0;
         text-align: center;
     }
     .Title_Welcome{
         color: aliceblue;
         font-size: 1rem;
         font-family: 'Helvetica Neue';
-        margin-left: 10%;
+        margin-left: 0;
+        justify-content: center;
         text-align: center;
     }
     .Sub_Title_Welcome{
@@ -660,7 +672,7 @@ header{
     .Home_Img img{
         width: 350px ;
         height: 350px;
-        margin-left: 100px;
+        margin-left: 0;
         padding: 0;
     }
 
@@ -670,22 +682,22 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 10vw;
+        margin: 0;
     }
     .Sub_Container{
         flex-direction: column;
-        margin-left: 100px;
+        margin: 0;
     }
     .Title_About h1{
-        margin-left: 25%;
+        margin: 0;
     }
 
     .About_Org p {
-        width: 100%;
-        margin-left: 20%;
+        width: 300px;
         padding: 0;
         font-size: 1rem;
         font-family: 'Helvetica Neue';
+        margin-left: 70px;
     }
 
     .Img_Team img{
@@ -702,7 +714,7 @@ header{
     }
     .Title_SubTitle_Team{
         width: 100%;
-        margin: 60px;
+        margin: 0;
     }
     .Title_SubTitle_Team p{
         width: 100%;
@@ -712,20 +724,20 @@ header{
         padding: 15px;
     }
     .Players{
-        margin-left: 150px;
+        margin-left: 0;
     }
 
     /*Streamrs Mobile*/
 
     .Container_Streams{
         width: 100%;
-        margin-left: 35%;
+        margin-left: 0;
     }
     .Text_Streams{
         margin: 0;
     }
     .Text_Streams p{
-        width: 130%;
+        width: 100%;
         font-size: 1rem;
         font-family: 'Helvetica Neue';
         padding: 15px;
@@ -743,7 +755,7 @@ header{
     /*Patrocinadores Mobile*/
     
     .Container_Sponsors{
-        margin-left: 20%;
+        margin-left: 0;
     }
     .Title_SubTitle_Sponsors{
         width: 90%;
@@ -762,22 +774,21 @@ header{
     .Sponsors_1 h1,.Sponsors_2 h1,.Sponsors_3 h1,.Sponsors_4 h1,.Sponsors_5 h1, .Sponsors_6 h1, .Sponsors_7 h1, .Sponsors_8 h1{
         display: flex;
         justify-content: center;
-        margin-left: 15px;
-        margin-top: 35px;
+        
     }
     .Sponsors_1 img,.Sponsors_2 img,.Sponsors_3 img,.Sponsors_4 img,.Sponsors_5 img, .Sponsors_6 img, .Sponsors_7 img, .Sponsors_8 img{
-        margin-left: 20px;
+        margin-left: 40px;
     }
     .Sponsors_1 p,.Sponsors_2 p,.Sponsors_3 p,.Sponsors_4 p,.Sponsors_5 p, .Sponsors_6 p, .Sponsors_7 p, .Sponsors_8 p{
         margin-bottom: 5px;
-        margin-left: 60px;
+        margin-right: 50px;
        
     }
 
     /*Footer*/
 
     .Container_Footer{
-        margin: 20%;
+        margin: 0;
         width: 100%;
     }
     .Texts_Footer{
@@ -797,6 +808,6 @@ header{
         
     }
     .Logos_Links img{
-        margin: 10px 0 10px 25px;
+        margin: 10px 20px 50px 20px;
     } 
 }
